syntax = "proto3";
package stocks_rpc;

option go_package = "go_rpc_server/market";

service StockMarket {

  rpc ListStocks(ListStocksRequest) returns (ListStocksResponse) {};

  rpc GetStockPrice(StockPriceRequest) returns (stream StockPriceResponse) {};
}

message ListStocksRequest {}

message ListStocksResponse {
  repeated string names =1;
}

message StockPriceRequest {
  string name = 1;
}

message StockPriceResponse {
  uint64 timestamp = 1;
  string ticker = 2;
  uint32 price = 3;
  uint32 volume = 4;
}